src/FireWrapper/wrapper.h

typedef struct ImVec4 ImVec4;
typedef struct ImVec2 ImVec2;
typedef struct ImGuiViewport ImGuiViewport;
typedef struct ImGuiStyle ImGuiStyle;
typedef struct ImColor ImColor;
typedef struct ImDrawList ImDrawList;
typedef struct ImDrawData ImDrawData;
typedef struct ImDrawCmd ImDrawCmd;
struct ImDrawCmd;
struct ImDrawData;
struct ImDrawList;
struct ImColor;
struct ImGuiStyle;
struct ImGuiViewport;
typedef int ImGuiCond;
typedef int ImGuiDataType;
typedef int ImGuiDir;
typedef int ImGuiTreeNodeFlags;
typedef void* ImTextureID;
typedef unsigned int ImU32;
typedef void(*ImDrawCallback)(const ImDrawList* parent_list, const ImDrawCmd* cmd);
struct ImVec2
{
	float x, y;
};
struct ImVec4
{
	float x, y, z, w;
};
typedef enum {
	ImGuiCol_Text,
	ImGuiCol_TextDisabled,
	ImGuiCol_WindowBg,
	ImGuiCol_ChildBg,
	ImGuiCol_PopupBg,
	ImGuiCol_Border,
	ImGuiCol_BorderShadow,
	ImGuiCol_FrameBg,
	ImGuiCol_FrameBgHovered,
	ImGuiCol_FrameBgActive,
	ImGuiCol_TitleBg,
	ImGuiCol_TitleBgActive,
	ImGuiCol_TitleBgCollapsed,
	ImGuiCol_MenuBarBg,
	ImGuiCol_ScrollbarBg,
	ImGuiCol_ScrollbarGrab,
	ImGuiCol_ScrollbarGrabHovered,
	ImGuiCol_ScrollbarGrabActive,
	ImGuiCol_CheckMark,
	ImGuiCol_SliderGrab,
	ImGuiCol_SliderGrabActive,
	ImGuiCol_Button,
	ImGuiCol_ButtonHovered,
	ImGuiCol_ButtonActive,
	ImGuiCol_Header,
	ImGuiCol_HeaderHovered,
	ImGuiCol_HeaderActive,
	ImGuiCol_Separator,
	ImGuiCol_SeparatorHovered,
	ImGuiCol_SeparatorActive,
	ImGuiCol_ResizeGrip,
	ImGuiCol_ResizeGripHovered,
	ImGuiCol_ResizeGripActive,
	ImGuiCol_Tab,
	ImGuiCol_TabHovered,
	ImGuiCol_TabActive,
	ImGuiCol_TabUnfocused,
	ImGuiCol_TabUnfocusedActive,
	ImGuiCol_DockingPreview,
	ImGuiCol_DockingEmptyBg,
	ImGuiCol_PlotLines,
	ImGuiCol_PlotLinesHovered,
	ImGuiCol_PlotHistogram,
	ImGuiCol_PlotHistogramHovered,
	ImGuiCol_TextSelectedBg,
	ImGuiCol_DragDropTarget,
	ImGuiCol_NavHighlight,
	ImGuiCol_NavWindowingHighlight,
	ImGuiCol_NavWindowingDimBg,
	ImGuiCol_ModalWindowDimBg,
	ImGuiCol_COUNT
}ImGuiCol_;
struct ImGuiStyle
{
	float Alpha;
	ImVec2 WindowPadding;
	float WindowRounding;
	float WindowBorderSize;
	ImVec2 WindowMinSize;
	ImVec2 WindowTitleAlign;
	ImGuiDir WindowMenuButtonPosition;
	float ChildRounding;
	float ChildBorderSize;
	float PopupRounding;
	float PopupBorderSize;
	ImVec2 FramePadding;
	float FrameRounding;
	float FrameBorderSize;
	ImVec2 ItemSpacing;
	ImVec2 ItemInnerSpacing;
	ImVec2 TouchExtraPadding;
	float IndentSpacing;
	float ColumnsMinSpacing;
	float ScrollbarSize;
	float ScrollbarRounding;
	float GrabMinSize;
	float GrabRounding;
	float TabRounding;
	float TabBorderSize;
	float TabMinWidthForUnselectedCloseButton;
	ImGuiDir ColorButtonPosition;
	ImVec2 ButtonTextAlign;
	ImVec2 SelectableTextAlign;
	ImVec2 DisplayWindowPadding;
	ImVec2 DisplaySafeAreaPadding;
	float MouseCursorScale;
	bool AntiAliasedLines;
	bool AntiAliasedFill;
	float CurveTessellationTol;
	float CircleSegmentMaxError;
	ImVec4 Colors[ImGuiCol_COUNT];
};
struct ImColor
{
	ImVec4 Value;
};
struct ImDrawCmd
{
	ImVec4 ClipRect;
	ImTextureID TextureId;
	unsigned int VtxOffset;
	unsigned int IdxOffset;
	unsigned int ElemCount;
	ImDrawCallback UserCallback;
	void* UserCallbackData;
};
struct ImDrawList
{
	ImVector_ImDrawCmd CmdBuffer;
	ImVector_ImDrawIdx IdxBuffer;
	ImVector_ImDrawVert VtxBuffer;
	ImDrawListFlags Flags;
	const ImDrawListSharedData* _Data;
	const char* _OwnerName;
	unsigned int _VtxCurrentIdx;
	ImDrawVert* _VtxWritePtr;
	ImDrawIdx* _IdxWritePtr;
	ImVector_ImVec4 _ClipRectStack;
	ImVector_ImTextureID _TextureIdStack;
	ImVector_ImVec2 _Path;
	ImDrawCmd _CmdHeader;
	ImDrawListSplitter _Splitter;
};
struct ImDrawData
{
	bool Valid;
	ImDrawList** CmdLists;
	int CmdListsCount;
	int TotalIdxCount;
	int TotalVtxCount;
	ImVec2 DisplayPos;
	ImVec2 DisplaySize;
	ImVec2 FramebufferScale;
	ImGuiViewport* OwnerViewport;
};
struct ImGuiViewport
{
	ImGuiID ID;
	ImGuiViewportFlags Flags;
	ImVec2 Pos;
	ImVec2 Size;
	ImVec2 WorkOffsetMin;
	ImVec2 WorkOffsetMax;
	float DpiScale;
	ImDrawData* DrawData;
	ImGuiID ParentViewportId;
	void* RendererUserData;
	void* PlatformUserData;
	void* PlatformHandle;
	void* PlatformHandleRaw;
	bool PlatformRequestMove;
	bool PlatformRequestResize;
	bool PlatformRequestClose;
};
typedef enum {
	ImGuiPlotType_Lines,
	ImGuiPlotType_Histogram
}ImGuiPlotType;
CIMGUI_API void igShowDemoWindow(bool* p_open);
CIMGUI_API void igShowAboutWindow(bool* p_open);
CIMGUI_API void igShowMetricsWindow(bool* p_open);
CIMGUI_API void igShowStyleEditor(ImGuiStyle* ref);
CIMGUI_API bool igShowStyleSelector(const char* label);
CIMGUI_API void igShowFontSelector(const char* label);
CIMGUI_API void igShowUserGuide(void);
CIMGUI_API void igStyleColorsDark(ImGuiStyle* dst);
CIMGUI_API void igStyleColorsClassic(ImGuiStyle* dst);
CIMGUI_API void igStyleColorsLight(ImGuiStyle* dst);
CIMGUI_API void igSetWindowPosVec2(const ImVec2 pos, ImGuiCond cond);
CIMGUI_API void igSetWindowSizeVec2(const ImVec2 size, ImGuiCond cond);
CIMGUI_API void igSetWindowCollapsedBool(bool collapsed, ImGuiCond cond);
CIMGUI_API void igSetWindowFontScale(float scale);
CIMGUI_API void igSetWindowPosStr(const char* name, const ImVec2 pos, ImGuiCond cond);
CIMGUI_API void igSetWindowSizeStr(const char* name, const ImVec2 size, ImGuiCond cond);
CIMGUI_API void igSetWindowCollapsedStr(const char* name, bool collapsed, ImGuiCond cond);
CIMGUI_API void igSetWindowFocusStr(const char* name);
CIMGUI_API void igSpacing(void);
CIMGUI_API void igUnindent(float indent_w);
CIMGUI_API void igTextUnformatted(const char* text, const char* text_end);
CIMGUI_API void igText(const char* fmt, ...);
CIMGUI_API void igTextColored(const ImVec4 col, const char* fmt, ...);
CIMGUI_API void igTextDisabled(const char* fmt, ...);
CIMGUI_API void igTextWrapped(const char* fmt, ...);
CIMGUI_API bool igSmallButton(const char* label);
CIMGUI_API bool igSliderFloat(const char* label, float* v, float v_min, float v_max, const char* format, float power);
CIMGUI_API bool igSliderFloat2(const char* label, float v[2], float v_min, float v_max, const char* format, float power);
CIMGUI_API bool igSliderFloat3(const char* label, float v[3], float v_min, float v_max, const char* format, float power);
CIMGUI_API bool igSliderFloat4(const char* label, float v[4], float v_min, float v_max, const char* format, float power);
CIMGUI_API bool igSliderAngle(const char* label, float* v_rad, float v_degrees_min, float v_degrees_max, const char* format);
CIMGUI_API bool igSliderInt(const char* label, int* v, int v_min, int v_max, const char* format);
CIMGUI_API bool igSliderInt2(const char* label, int v[2], int v_min, int v_max, const char* format);
CIMGUI_API bool igSliderInt3(const char* label, int v[3], int v_min, int v_max, const char* format);
CIMGUI_API bool igSliderInt4(const char* label, int v[4], int v_min, int v_max, const char* format);
CIMGUI_API bool igSliderScalar(const char* label, ImGuiDataType data_type, void* p_data, const void* p_min, const void* p_max, const char* format, float power);
CIMGUI_API bool igSliderScalarN(const char* label, ImGuiDataType data_type, void* p_data, int components, const void* p_min, const void* p_max, const char* format, float power);
CIMGUI_API bool igVSliderFloat(const char* label, const ImVec2 size, float* v, float v_min, float v_max, const char* format, float power);
CIMGUI_API bool igVSliderInt(const char* label, const ImVec2 size, int* v, int v_min, int v_max, const char* format);
CIMGUI_API bool igVSliderScalar(const char* label, const ImVec2 size, ImGuiDataType data_type, void* p_data, const void* p_min, const void* p_max, const char* format, float power);
CIMGUI_API bool igTreeNodeStr(const char* label);
CIMGUI_API bool igTreeNodeStrStr(const char* str_id, const char* fmt, ...);
CIMGUI_API bool igTreeNodePtr(const void* ptr_id, const char* fmt, ...);
CIMGUI_API bool igTreeNodeExStr(const char* label, ImGuiTreeNodeFlags flags);
CIMGUI_API bool igTreeNodeExStrStr(const char* str_id, ImGuiTreeNodeFlags flags, const char* fmt, ...);
CIMGUI_API bool igTreeNodeExPtr(const void* ptr_id, ImGuiTreeNodeFlags flags, const char* fmt, ...);
CIMGUI_API void igTreePushStr(const char* str_id);
CIMGUI_API void igTreePushPtr(const void* ptr_id);
CIMGUI_API void igTreePop(void);
CIMGUI_API void igPlotLinesFnFloatPtr(const char* label, float(*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 graph_size);
CIMGUI_API void igPlotHistogramFnFloatPtr(const char* label, float(*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 graph_size);
CIMGUI_API void igValueBool(const char* prefix, bool b);
CIMGUI_API void igValueInt(const char* prefix, int v);
CIMGUI_API void igValueUint(const char* prefix, unsigned int v);
CIMGUI_API void igValueFloat(const char* prefix, float v, const char* float_format);
CIMGUI_API void igSetTooltip(const char* fmt, ...);
CIMGUI_API void igSetTabItemClosed(const char* tab_or_docked_window_label);
CIMGUI_API void igSetAllocatorFunctions(void*(*alloc_func)(size_t sz, void* user_data), void(*free_func)(void* ptr, void* user_data), void* user_data);
CIMGUI_API void igUpdatePlatformWindows(void);
CIMGUI_API void ImColor_destroy(ImColor* self);
CIMGUI_API ImColor* ImColor_ImColorInt(int r, int g, int b, int a);
CIMGUI_API ImColor* ImColor_ImColorU32(ImU32 rgba);
CIMGUI_API ImColor* ImColor_ImColorFloat(float r, float g, float b, float a);
CIMGUI_API ImColor* ImColor_ImColorVec4(const ImVec4 col);
CIMGUI_API void ImColor_SetHSV(ImColor* self, float h, float s, float v, float a);
CIMGUI_API void ImColor_HSV(ImColor *pOut, ImColor* self, float h, float s, float v, float a);
CIMGUI_API ImDrawCmd* ImDrawCmd_ImDrawCmd(void);
CIMGUI_API void ImDrawCmd_destroy(ImDrawCmd* self);
CIMGUI_API ImDrawData* ImDrawData_ImDrawData(void);
CIMGUI_API void ImDrawData_destroy(ImDrawData* self);
CIMGUI_API void ImDrawData_Clear(ImDrawData* self);
CIMGUI_API void ImDrawData_DeIndexAllBuffers(ImDrawData* self);
CIMGUI_API void ImDrawData_ScaleClipRects(ImDrawData* self, const ImVec2 fb_scale);
CIMGUI_API int igPlotEx(ImGuiPlotType plot_type, const char* label, float(*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 frame_size);